--- a/templates/registro-estudiante.html
+++ b/templates/registro-estudiante.html
@@ -56,63 +56,87 @@
       <div class="container-fluid">
         <div class="row">
 
-          <div class="col-md-3"></div>
-          <div class="col-md-5">
+          <div class="col-md-12"></div>
 
-            <div class="form-group">
-              <h4>
-                <label for="exampleInputnomre">Nombre</label>
-                <input type= "text" name="nombre" class="form-control" id="exampleInputnombre" placeholder="nombre"></h4>
-            </div>
-            <div class="form-group">
-              <h4>
-                <label for="exampleInputapellidos">Apellidos</label>
-                <input type = "text" name="apellidos" class="form-control" id="exampleInputapellidos" placeholder="apellidos"></h4>
-            </div>
+          <div class="col-md-12">
 
-            <div class="form-group">
-              <h4>
-                <label for="exampleInputapellidos">Correo</label>
-                <input type = "text" name="email" class="form-control" id="exampleInputemail" placeholder="Correo"></h4>
-            </div>
-
-            <div class="form-group">
-              <h4>
-                <label for="exampleInputapellidos">Documento Identidad</label>
-                <input type = "text" name="cedula" class="form-control" id="exampleInputdocumento" placeholder="Documento"></h4>
+            <div class="col-ms-12 form-group">
+              <div class ="col-md-1">
+                <label for="exampleInputnomre"><h4>Nombres:</h4></label>
+              </div>
+              <div class ="col-md-5">
+                <input type= "text" name="nombre" class="form-control" id="exampleInputnombre" placeholder="nombre">
+              </div>
+              <div class ="col-md-1">
+                <label for="exampleInputnomre"><h4>Apellidos:</h4></label>
+              </div>
+              <div class ="col-md-5">
+                 <input type = "text" name="apellidos" class="form-control" id="exampleInputapellidos" placeholder="apellidos">
+              </div>
             </div>
 
-              <div class="form-group">
-              <h4>
-                <label for="exampleInputapellidos">Username</label>
-                <input type = "text" name="username" class="form-control" id="exampleInputdocumento" placeholder="Documento"></h4>
+            <div class="col-md-12"></div>
+
+            <div class="col-ms-12 form-group">
+              <div class ="col-md-1">
+                <label for="exampleInputnomre"><h4>Correo:</h4></label>
+              </div>
+              <div class ="col-md-5">
+                <input type = "text" name="email" class="form-control" id="exampleInputemail" placeholder="Correo">
+              </div>
+              <div class ="col-md-3">
+                <label for="exampleInputnomre"><h4>Documento Identidad:</h4></label>
+              </div>
+              <div class ="col-md-3">
+                  <input type = "text" name="cedula" class="form-control" id="exampleInputdocumento" placeholder="Documento">
+              </div>
             </div>
 
-            <div class="form-group">
-              <h4>
-                <label for="exampleInputPassword1">Contraseña</label>
-                <input type="password"  name = "password1" class="form-control" id="exampleInputPassword1" placeholder="Password"></h4>
+            <div class="col-md-12"></div>
+
+            <div class="col-ms-12 form-group">
+              <div class ="col-md-2">
+                <label for="exampleInputnomre"><h4>Username:</h4></label>
+              </div>
+              <div class ="col-md-4">
+                <input type = "text" name="username" class="form-control" id="exampleInputdocumento" placeholder="Username">
+              </div>
+              <div class ="col-md-1">
+                <label for="exampleInputnomre"><h4>Sexo:</h4></label>
+              </div>
+              <div class ="col-md-5">
+                  <label class="checkbox-inline">
+                      <input type="checkbox" id="checkboxEnLinea1" name='sexo' value="M"> Masculino
+                  </label>
+                  <label class="checkbox-inline">
+                      <input type="checkbox" id="checkboxEnLinea2" name='sexo' value="F"> Femenino
+                  </label>
+              </div>
             </div>
 
-            <div class="form-group">
-              <h4>
-                <label for="exampleInputPassword2">Confirmar Contraseña</label>
-                <input type="password" name='password2' class="form-control" id="exampleInputPassword2" placeholder="Password"></h4>
+            <div class="col-md-12"></div>
+
+            <div class="col-ms-12 form-group">
+              <div class ="col-md-2">
+                <label for="exampleInputnomre"><h4>Contraseña:</h4></label>
+              </div>
+              <div class ="col-md-4">
+                <input type="password"  name = "password1" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              </div>
+              <div class ="col-md-3">
+                <label for="exampleInputnomre"><h4>Confirmar Contraseña:</h4></label>
+              </div>
+              <div class ="col-md-3">
+                <input type="password" name='password2' class="form-control" id="exampleInputPassword2" placeholder="Password">
+              </div>
             </div>
 
-              <div class="form-group">
-
-                <label for="exampleInputPassword2">Sexo</label>
-                <h4>Masculino<input type="radio" name='sexo' value="M" class="form-control" ></h4>
-                <h4>Femenino<input type="radio" name='sexo' value="F" class="form-control" ></h4>
-
-            </div>
+            <div class="col-md-12"></div>
 
             <div>
-              <p>
-                <button type="submit" class="btn btn-primary btn-lg pull-right">Registrar Estudiante</button>
-              </p>
+              <p><button type="submit" class="btn btn-primary btn-lg pull-right">Registrar Estudiante</button> </p>
             </div>
+
           </div>
         </div>
       </div>
