--- a/templates/paginaDocente/notas-est.html
+++ b/templates/paginaDocente/notas-est.html
@@ -60,37 +60,15 @@
                         </div>
                         <button type="button" class="btn btn-primary">Enviar</button>
                     </div> -->
-                <div class="col-md-7 col-lg-7">
 
-                    <select class="form-control" id="id_curso" name='curso' >
-                        <option value="0" >Seleccionar</option>
-                            {% for row in user.profesor.curso_set.all %}
-                                <option id='curso' value="{{ row.id }}">{{ row.nombre }}</option>
-                            {% endfor %}
-                    </select>
-                
-                
-                    <select class="form-control" id="id_grupo" name='grupo'>
-                        <option value="0" >Seleccionar</option>
-                            {% for row in grupos %}
-                                <option id='grupo' value="{{ row.id }}">{{ row.nombre }}</option>
-                            {% endfor %}
-                    </select>
-                    <br />
-
-                    {% for row in grupos %}
-                        <div value="{{ row.id }}">{{ row.nombre }}</div>
-                    <a onclick="mostrar({{row.id}})" href="#" class="btn btn-primary">Buscar</a>
+                    {% for row in grupo %}
+                    {{row.nombre}}
                     {% endfor %}
-                </div>
-                
-                <br /><br /><br /><br /><br /><hr>
-
                 <div class="panel">
                     <div class="panel-body">
                     <div class="table-responsive">
-                    <table class="table table-bordered table-hover table-striped">
-                        <thead>
+                   <table class="table table-bordered table-hover table-striped">
+                <thead>
                   <tr>
                     <th>Nombre</th>
                     <th>Documento</th>
@@ -100,9 +78,30 @@
                       <th>Nota</th>
                   </tr>
                 </thead>
-                        <tbody id="con_list">
-                              
-                        </tbody>
+                    {% for estudiante in estudiantes %}
+                        <tbody>
+                          <tr>
+                              <td>
+                                <h4>{{ estudiante.estudiante.id.first_name }} {{ estudiante.estudiante.id.last_name }}</h4>
+                              </td>
+                              <td>
+                                <h4>{{ estudiante.estudiante.documento }}</h4>
+                              </td>
+                              <td>
+                                <h4>{{ estudiante.estudiante.id.email }}</h4>
+                              </td>
+                              <td>
+                                <h4>{{ estudiante.estudiante.id.last_login }}</h4>
+                              </td>
+                              <td>
+                                <h4><a class="btn btn-primary" href="{% url 'eventos-estudiantes' pk=estudiante.estudiante.pk %}">Ver</a></h4>
+                              </td>
+                              <td>
+                                <h4><a class="btn btn-primary" href="{% url 'lista-notas' pk=estudiante.estudiante.pk %}">Ver</a></h4>
+                              </td>
+                          </tr>
+                         </tbody>
+                    {% endfor %}
                  </table>
                     </div>
                     </div>        
@@ -116,30 +115,4 @@
         </div>
         <!-- /#page-wrapper -->
 
-{% endblock %}
-{% block javascript %}
-<script>
-function mostrar(grupo){
-
-  var pk = grupo;
-  console.log(pk);
-    $.ajax({
-      type: 'GET',
-            url: 'note/est/'+pk+'/',
-            dataType: 'json',
-            success: function(data) 
-            {
-                for(var i = 0; i < data.length; i++)
-                {
-                    var src = "<tr>";
-                    src += "<td>"+data[i].nombre+"</td>";
-                    src += "<td>"+data[i].documento+"</td>";
-                    src += "</tr>";
-                    document.getElementById("con_list").innerHTML += src;
-                }
-            }
-    })
-
-};
-</script> 
 {% endblock %}
